--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,14 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+  "salesforcedx-vscode-core.show-cli-success-msg": false,
+  "salesforce.einsteinForDevelopers.enableAutocompletionsByFileType": {
+    "apex": false,
+    "javascript": true,
+    "css": true,
+    "html": true
+  },
+  "salesforce.einsteinForDevelopers.enable": false,
+  "salesforce.einsteinForDevelopers.enableAutocompletions": false
 }
